[project]
name = "piscanner"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "riccardodivirgilio", email = "riccardodivirgilio@gmail.com" },
]
dependencies = ["click==8.2.1", "evdev==1.9.2"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
