[project]
name = "piscanner"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "riccardodivirgilio", email = "riccardodivirgilio@gmail.com" },
]
dependencies = ["click==8.2.1", "evdev==1.9.2", "aiosqlite==0.21.0", "sanic==25.3.0"]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
