[project]
dependencies = [
    "click==8.2.1",
    "aiosqlite==0.21.0",
    "aiohttp==3.12.0",
    "RPi.GPIO==0.7.1; sys_platform != 'darwin'",
    "evdev==1.9.2; sys_platform != 'darwin'",
]

name = "piscanner"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "riccardodivirgilio", email = "riccardodivirgilio@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
